apps/20-media/booklore/overlays/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booklore-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: BookLore
    gethomepage.dev/icon: booklore.png
    gethomepage.dev/group: Media
spec:
  ingressClassName: traefik
  rules:
    - host: booklore.test.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booklore
                port:
                  number: 6060
  tls:
    - hosts:
        - booklore.test.truxonline.com
      secretName: booklore-tls
